# GetTheBear

./: .gitignore  README.md  analytics.py  app.py  config.py  count_tokens.py  models.py  portfolio_routes.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
analytics/: __init__.py  caching.py  calculation.py  csv_generator.py  fetching.py
api/: __init__.py  auth.py  portfolio.py
attached_assets/: Pasted--Objective-Re-arrange-the-weight-input-control-area-so-that-it-s-clearer-and-ready-for-future-we-1745008088804.txt  Pasted--chore-ui-polish-weights-controls-correlation-heat-map-1-Weights-controls--1744933322612.txt  Pasted-Below-is-an-updated-self-contained-task-description-you-can-paste-straight-to-the-Replit-Agent-I-1744933300815.txt
migrations/versions/: 1cbd1e99dfc0_check_models_after_cleanup.py  54da1785c634_initial_migration.py  85ac18e38f27_add_user_portfolio_security_and_.py
static/css/: styles.css
static/data/: tickers.csv
static/js/: chartPlugins.js  charts.js  custom-matrix.js  main.js
static/js/modules/: benchmarkControl.js  datePicker.js  tickerControls.js
static/js/modules/charts/: allocation.js  annualReturns.js  correlation.js  drawdown.js  equityCurve.js  index.js
static/js/modules/utils/: chartUtils.js  validation.js
templates/: index.html  layout.html
tests/: conftest.py  test_analytics.py  test_api.py  test_app.py  test_correlation.py  test_metrics.py  test_routes.py
